tests/fixtures/errors/generic_unknown_type_arg.z
# E0400: an extra/unknown type argument to a generic type.
main: function is {
    x: (List of: i64 bogus: f64)
}
